# react-native-cardano-wallet-poc

./: README.md  index.d.ts  index.js  package.json  react-native-cardano-wallet-poc.podspec
android/: build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/java/io/emurgo/rncardanowallet/: CardanoWalletPocModule.java  CardanoWalletPocPackage.java  Native.java  RPtr.java  Result.java
ios/: CardanoWalletPoc.h  CardanoWalletPoc.m  NSData+DataPtr.h  NSData+DataPtr.m  NSString+RPtr.h  NSString+RPtr.m  Podfile  SafeOperation.h  SafeOperation.m
ios/CardanoWalletPoc.xcodeproj/: project.pbxproj
rust/: Cargo.toml  build.rs
rust/src/: lib.rs  ptr_impl.rs
rust/src/android/: address.rs  mod.rs  ptr_j.rs  result.rs
rust/src/ios/: address.rs  mod.rs
